src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>test_field10__c</fullName>
        <label>test11111</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_field10t__c</fullName>
        <label>test_field10t</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_field11__c</fullName>
        <label>test_field11</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_field11t__c</fullName>
        <label>test_field11t</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_field12__c</fullName>
        <label>test_field12</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_field12t__c</fullName>
        <label>test_field12t</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>